# harness-runner

./: .gitignore  BACKLOG.md  LICENSE  README.md  mcp.template.json  package.json  pyproject.toml  tsconfig.json
docs/: decisions.md
examples/: README.md
prompts/: blackbox_validator.md  code_reviewer.md  evaluator.md  generator.md  planner.md  refiner.md  reviewer.md
src/: claude.ts  cli.ts  paths.ts
src/harness_runner/: __init__.py  budget.py  claude.py  cli.py  git_util.py  history.py  paths.py  quality_gate.py  retry.py  run.py  scaffold.py  validate.py
src/harness_runner/backends/: __init__.py  anthropic_api.py  base.py  claude_cli.py
src/harness_runner/roles/: blackbox_validator.py  code_reviewer.py  evaluator.py  generator.py  planner.py  refiner.py  reviewer.py
src/roles/: generator.ts  planner.ts
templates/: app_spec.template.md
tests/: test_blackbox_validator.py  test_quality_gate.py
